--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using DMO;
-@model RickAndMortyDMO
+﻿@using ViewModel
+@model RickAndMortyViewModel
 
 <div class="container d-flex flex-wrap">
 @foreach (var item in Model.Results)
